--- a/.github/workflows/project_test.yml
+++ b/.github/workflows/project_test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Kaggle
         run: |
           mkdir $HOME/.kaggle
-          echo '{"username":"${{ secrets.MY_KAGGLE_USERNAME }}","key":"${{ secrets.MY_KAGGLE_KEY }}"}' > $HOME/.kaggle/kaggle.json
+          echo '{"username":"${{ secrets.KAGGLE_USERNAME }}","key":"${{ secrets.KAGGLE_KEY }}"}' > $HOME/.kaggle/kaggle.json
           chmod 600 $HOME/.kaggle/kaggle.json
 
       - name: Run Script
